# SolariumProcessor

./: .gitattributes  .gitignore  Cargo.toml  README.md  isa.txt
cbc/: Cargo.toml
cbc/src/: main.rs
cbuoy/: .gitignore  Cargo.toml
cbuoy/examples/: more_complete_impl.cb  printing.cb  printing_asm.cb  test.cb  test.spc
cbuoy/src/: compiler.rs  expressions.rs  functions.rs  lib.rs  literals.rs  parser.rs  tokenizer.rs  typing.rs  utilities.rs  variables.rs
cbuoy/src/components/: addressable.rs  expression.rs  mod.rs  statement.rs  variable.rs
cbuoy/src/parser/: mod.rs
cbuoy/src/tokenizer/: mod.rs
cbuoy/src/types/: mod.rs
doc/: .gitignore  isa.tex
doc/images/: logo.eps
examples/: counter.sam  counter.smc  default.smc  default_small.smc  hello_world.smc  hello_world.spb  hello_world.sub  infinite_counter.smc  serial_echo.smc  spros.smc  test.sub
examples/jasm/: hello_world.jsm  serial_echo.jsm
examples/spa/: counter.smc  default.smc  default_small.smc  hello_world.smc  infinite_counter.smc  serial_echo.smc  thread_test.smc
examples/spcc/: hello_world.sub
jasm/: .gitignore  Cargo.toml
jasm/src/: argument.rs  instructions.rs  lib.rs
jib/: Cargo.toml
jib-asm/: Cargo.toml
jib-asm/examples/: infinite_counter.jsm  serial_echo.jsm  thread_test.jsm
jib-asm/src/: argument.rs  instructions.rs  lib.rs
jib/src/: lib.rs
jib/src/cpu/: instruction.rs  mod.rs  operations.rs  register.rs
jib/src/device/: irq_clock.rs  mod.rs  serial_io.rs
jib/src/memory/: memory_map.rs  mod.rs  segment_ro.rs  segment_rw.rs
jib/src/text/: mod.rs
libassemble/: Cargo.toml
libassemble/src/: lib.rs
libscpu/: Cargo.toml
libscpu-assemble/: Cargo.toml
libscpu-assemble/src/: lib.rs
libscpu-assemble/src/instructions/: immediate.rs  mod.rs  register.rs  single.rs  utils.rs
libscpu/src/cpu/: mod.rs  processor.rs  registers.rs
libscpu/src/memory/: memory_map.rs  mod.rs  segment_rw.rs
libsproc/: Cargo.toml
libsproc-assemble/: Cargo.toml
libsproc-assemble/src/: lib.rs
libsproc-assemble/src/assembly/: argument.rs  asm_regex.rs
libsproc-assemble/src/instructions/: immediate.rs  mod.rs  single.rs  utils.rs
libsproc-sub/: Cargo.toml  test.sub
libsproc-sub/src/: lib.rs  main.rs
libsproc-sub/src/compiler/: mod.rs
libsproc-sub/src/lexer/: common.rs  expression.rs  function.rs  literal.rs  mod.rs  statement.rs  statement_if.rs  statement_while.rs  token_iter.rs  variable.rs
libsproc-sub/src/tokenizer/: keyword.rs  mod.rs  string_literal.rs  symbol.rs
libsproc/src/: lib.rs
libsproc/src/common/: mod.rs
libsproc/src/cpu/: mod.rs  processor.rs  registers.rs
libsproc/src/cpu/instructions/: mod.rs
libsproc/src/devices/: serial_io.rs
libsproc/src/memory/: memory_map.rs  mod.rs  segment_ro.rs  segment_rw.rs
libsproc/src/text/: mod.rs
sal/: Cargo.toml
sal/src/: lib.rs
sal/src/assembly/: mod.rs
sal/src/instructions/: mod.rs
scpu-assemble/: Cargo.toml
scpu-assemble/src/: main.rs
scpu-assembler/: Cargo.toml
sda/: Cargo.toml
sda/src/: argument.rs  assembler.rs  combined.rs  instructions.rs  lib.rs  main.rs  parser.rs
sda/src/assembly/: argument.rs  asm_regex.rs  error.rs  mod.rs
sda/src/instructions/: immediate.rs  mod.rs  register.rs  single.rs
sol32/: Cargo.toml
sol32/src/: lib.rs
sol32/src/common/: mod.rs
sol32/src/cpu/: instruction.rs  mod.rs  operations.rs  register.rs
sol32/src/device/: irq_clock.rs  mod.rs  serial_io.rs
sol32/src/memory/: memory_map.rs  mod.rs  segment_ro.rs  segment_rw.rs
sol32/src/text/: mod.rs
sol32asm/: Cargo.toml
sol32asm/src/: argument.rs  immediate.rs  instruction.rs  instructions.rs  lib.rs
solar32/: Cargo.toml
spa/: Cargo.toml
spa/src/: lib.rs
spa/src/instructions/: mod.rs  register.rs
spc/: .gitignore  Cargo.toml
spc-cpp/: CMakeLists.txt
spc-cpp/src/: main.cpp
spc-rust/: Cargo.toml
spc-rust/examples/: test.spc
spc-rust/src/components/expressions/: binary_expression.rs  mod.rs  variable.rs
spc-rust/src/tokenizer/: mod.rs
spc/examples/: test.spc
spc/src/: lib.rs  main.rs
spc/src/components/: mod.rs  statement.rs  types.rs
spc/src/components/expressions/: binary_expression.rs  function_call.rs  mod.rs  variable.rs
spc/src/components/types/: mod.rs
spc/src/parser/: mod.rs
spc/src/tokenizer/: mod.rs
spc/src/types/: mod.rs
spcc/: Cargo.toml  test.sub
spcc/examples/: aoc2021day01.spl
spcc/src/: lib.rs  main.rs
spcc/src/compiler/: mod.rs
spcc/src/lexer/: common.rs  expression.rs  function.rs  literal.rs  mod.rs  program.rs  statement.rs  token_iter.rs  variable.rs
spcc/src/tokenizer/: keyword.rs  mod.rs  name.rs  string_literal.rs  symbol.rs  utils.rs  word_literal.rs
sproc/: Cargo.toml
sproc/src/: lib.rs
sproc/src/common/: mod.rs
sproc/src/cpu/: mod.rs  processor.rs  registers.rs
sproc/src/devices/: irq_clock.rs  mod.rs  serial_io.rs
sproc/src/memory/: memory_map.rs  mod.rs  segment_ro.rs  segment_rw.rs
sproc/src/text/: mod.rs
src/: main.rs  scpu.rs
src/assembler/: asm_instruction.rs  asm_macro.rs  inst_jump.rs  instruction_jump.rs  location.rs  mod.rs  register_def.rs
src/cpu/: location.rs  mod.rs  processor.rs  registers.rs
src/memory/: default_segment.rs  memory_map.rs  memory_segment.rs  mod.rs  read_only_memory.rs  read_write_memory.rs  segment_rw.rs
visual-jib/: Cargo.toml
visual-jib/src/: cpu_thread.rs  main.rs  main_window.rs  messages.rs
visual-scpu/: Cargo.toml
visual-scpu/src/: fltk_app.rs  fltk_registers.rs  main.rs  messages.rs  processor_state.rs  scpu_thread.rs
visual-scpu/src/assembler/: mod.rs
visual-sol32/: .gitignore  Cargo.toml
visual-sol32/src/: cpu_thread.rs  main_window.rs  messages.rs
visual-sproc/: Cargo.toml
visual-sproc-gtk/: Cargo.toml
visual-sproc-gtk/src/: cpu_thread.rs  main.rs  main_window.rs  messages.rs
visual-sproc/src/: cpu_thread.rs  fltk_app.rs  fltk_registers.rs  main.rs  main_window.rs  messages.rs  processor_state.rs  scpu_thread.rs
