[package]
name = "cbuoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
once_cell = "1"
jib = { path = "../jib", version = "*" }
jasm = { path = "../jasm", version = "*" }

[profile.release]
lto = true
strip = true
