[package]
name = "jasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jib = { path = "../jib", version = "*" }
regex = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
strip = true
