[package]
name = "sda"
version = "0.1.0"
authors = ["Ian O'Rourke <cessna.ian@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
once_cell = "1.17.1"
sproc = { path = "../sproc", version = "*" }
clap = { version = "4", features = ["derive"] }
