[package]
name = "spc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8"
sproc = { path = "../sproc", version = "*" }
sda = { path = "../sda", version = "*" }

[profile.release]
lto = true
strip = true
