[package]
name = "spc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9"
once_cell = "1.18"
sol32 = { path = "../sol32", version = "*" }
sol32asm = { path = "../sol32asm", version = "*" }

[profile.release]
lto = true
strip = true
