[package]
name = "visual-jib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2"
gtk = { version = "0.8", package = "gtk4", features = ["v4_6"] }
jib = { path = "../jib", version = "*" }
jasm = { path = "../jasm", version = "*" }

[profile.release]
lto = true
strip = true
