[package]
name = "visual-scpu"
version = "0.1.0"
authors = ["Ian O'Rourke <cessna.ian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libscpu = { path = "../libscpu", version = "*" }
libscpu-assemble = { path = "../libscpu-assemble", version = "*" }

[target.'cfg(unix)'.dependencies]
fltk = { version = "1.2.8" }

[target.'cfg(windows)'.dependencies]
fltk = { version = "1.2.8", features = ["fltk-bundled"] }
