[package]
name = "visual-sol32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
gtk = { version = "0.7", package = "gtk4", features = ["v4_8"] }
sol32 = { path = "../sol32", version = "*" }
sol32asm = { path = "../sol32asm", version = "*" }
#spcc = { path = "../spcc", version = "*" }

[profile.release]
lto = true
strip = true
