[package]
name = "visual-sproc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5", package = "libadwaita", features = ["v1_3"] }
gtk = { version = "0.7", package = "gtk4", features = ["gnome_44"] }
