[package]
name = "visual-sproc"
version = "0.1.0"
authors = ["Ian O'Rourke <cessna.ian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsproc = { path = "../libsproc", version = "*" }
libsproc-assemble = { path = "../libsproc-assemble", version = "*" }
fltk = { version = "1.2.9" }
