[package]
name = "visual-sproc"
version = "0.1.0"
authors = ["Ian O'Rourke <cessna.ian@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sproc = { path = "../sproc", version = "*" }
sda = { path = "../sda", version = "*" }
fltk = { version = "1.2.20" }
